[gd_scene load_steps=7 format=3 uid="uid://dw7ci3uixjuev"]

[ext_resource type="Script" uid="uid://dgc2ea2ye53p8" path="res://src/UI/Timeline/CelButton.gd" id="1_iewgo"]
[ext_resource type="PackedScene" uid="uid://3pmb60gpst7b" path="res://src/UI/Nodes/TransparentChecker.tscn" id="2_mi8wp"]
[ext_resource type="Shader" uid="uid://c50kmfvf635kb" path="res://src/Shaders/TransparentChecker.gdshader" id="3_qv21g"]
[ext_resource type="Texture2D" uid="uid://bsnfsiytk8sbs" path="res://assets/graphics/misc/z_index_indicator.png" id="4_64heq"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/Sliders/ValueSlider.tscn" id="5_qau3o"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("3_qv21g")
shader_parameter/size = 10.0
shader_parameter/alpha = 1.0
shader_parameter/color1 = Color(0.7, 0.7, 0.7, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scale = Vector2(0, 0)
shader_parameter/rect_size = Vector2(0, 0)
shader_parameter/follow_movement = false
shader_parameter/follow_scale = false

[node name="CelButton" type="Button"]
custom_minimum_size = Vector2(36, 36)
offset_right = 36.0
offset_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"CelButton"
toggle_mode = true
button_mask = 7
script = ExtResource("1_iewgo")

[node name="UIColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Linked" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -8.0
offset_right = -1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 1, 0.4, 1)

[node name="CelTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
expand_mode = 1
stretch_mode = 5

[node name="TransparentChecker" parent="CelTexture" instance=ExtResource("2_mi8wp")]
show_behind_parent = true
material = SubResource("1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ZIndexIndicator" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -18.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_64heq")
stretch_mode = 5

[node name="PopupMenu" type="PopupMenu" parent="."]
oversampling_override = 1.0
size = Vector2i(101, 100)
item_count = 1
item_0/text = "Properties"
item_0/id = 0

[node name="RippleOptions" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Ripple Cel"
position = Vector2i(0, 36)
size = Vector2i(350, 100)

[node name="PanelContainer" type="PanelContainer" parent="RippleOptions"]
offset_left = 8.0
offset_top = 8.0
offset_right = 342.0
offset_bottom = 51.0

[node name="RippleSlider" parent="RippleOptions/PanelContainer" instance=ExtResource("5_qau3o")]
layout_mode = 2
tooltip_text = "Maximum amount of allowed Ripples. The actual count is limited by the frame count"
min_value = 1.0
value = 1.0
allow_greater = true
prefix = "Max Ripples:"
suffix = "times"

[connection signal="pressed" from="." to="." method="_on_CelButton_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="confirmed" from="RippleOptions" to="." method="_on_ripple_options_confirmed"]
