[gd_scene load_steps=3 format=3 uid="uid://dw7ci3uixjuev"]

[ext_resource type="PackedScene" uid="uid://byhnvhs6av108" path="res://src/UI/Timeline/BaseCelButton.tscn" id="1"]
[ext_resource type="Script" path="res://src/UI/Timeline/CelButton.gd" id="2"]

[node name="PixelCelButton" instance=ExtResource("1")]
pivot_offset = Vector2(-18, 6)
script = ExtResource("2")

[node name="PopupMenu" type="PopupMenu" parent="." index="1"]
item_count = 3
item_0/text = "Delete"
item_0/id = -1
item_1/text = "Link Cels to"
item_1/id = -1
item_2/text = "Unlink Cels"
item_2/id = 2

[node name="LinkedIndicator" type="Polygon2D" parent="." index="2"]
color = Color(0, 1, 0, 1)
invert_enabled = true
invert_border = 1.0
polygon = PackedVector2Array(0, 0, 36, 0, 36, 36, 0, 36)

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
